--- a/foundations/block-and-inline/02-margin-and-padding-2/style.css
+++ b/foundations/block-and-inline/02-margin-and-padding-2/style.css
@@ -7,21 +7,35 @@ body {
   width: 400px;
   background: #fff;
   margin: 16px auto;
+  padding: 8px;
 }
 
 .title {
   background: #e3f4ff;
+  margin-bottom: 8px;
+  padding: 8px;
+  font-size: 16px;
 }
 
 .content {
   background: #e3f4ff;
+  margin: 8px auto;
+  padding: 16px 8px;
+  margin-bottom: 8px;
 }
 
 .button-container {
+  text-align: center;
   background: #e3f4ff;
+  /* margin: 8px auto; */
+  padding: 8px;
+  
 }
 
 button {
+  display: block;
   background: white;
-  border: 1px solid #eee;
+  border: 1px solid #eee;  
+  margin: 0px auto;
+  padding: 8px 24px;
 }
