--- a/foundations/flex/02-flex-header/style.css
+++ b/foundations/flex/02-flex-header/style.css
@@ -1,9 +1,14 @@
 .header  {
+  display: flex;
   font-family: monospace;
   background: papayawhip;
+  justify-content: space-between;
+  align-items: center;
+  
 }
 
 .logo {
+  display: flex;
   font-size: 48px;
   font-weight: 900;
   color: tomato;
@@ -14,6 +19,12 @@
 ul {
   /* this removes the dots on the list items*/
   list-style-type: none;
+  display: flex;
+  justify-content: space-around;
+  gap: 8px;
+  margin: 0px 8px;
+  padding: 0;
+
 }
 
 a {
@@ -23,3 +34,4 @@ a {
   /* this removes the line under the links */
   text-decoration: none;
 }
+
