--- a/foundations/flex/06-flex-layout/style.css
+++ b/foundations/flex/06-flex-layout/style.css
@@ -1,6 +1,8 @@
 @import url('https://fonts.googleapis.com/css2?family=Roboto:wght@400;700&display=swap');
 
 body {
+  display: flex;
+  flex-direction: column;   
   height: 100vh;
   margin: 0;
   overflow: hidden;
@@ -16,6 +18,7 @@ button {
   border: none;
   border-radius: 8px;
   background: #eee;
+  padding: 8px;
 }
 
 input {
@@ -24,3 +27,42 @@ input {
   padding: 8px 24px;
   width: 400px;
 }
+
+ul {
+  display: flex;
+  list-style: none; 
+  margin: 0;
+  padding: 0;
+  gap: 10px; 
+}
+
+a {
+  text-decoration: none;
+  color: gray;
+  
+}
+
+.header {
+  display: flex;
+  justify-content: space-between;
+  
+}
+
+.content {
+  flex: 1;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  margin-bottom: auto;
+  gap: 16px;
+}
+.footer {
+  display: flex;
+  justify-content: space-between;
+  
+  background-color: rgb(233, 228, 228);
+  
+} 
+
+
