--- a/foundations/flex/07-flex-layout-2/style.css
+++ b/foundations/flex/07-flex-layout-2/style.css
@@ -1,29 +1,77 @@
 body {
+  display: flex;
+  flex-direction: column;
   font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
   margin: 0;
   min-height: 100vh;
+
 }
 
 .header {
-  height: 72px;
+  display: flex;
+  align-items: center;
   background: darkmagenta;
   color: white;
+  padding: 8px;
+  font-weight: 800;
 }
 
 .footer {
-  height: 72px;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  
   background: #eee;
   color: darkmagenta;
 }
 
 .sidebar {
-  width: 300px;
+  width: 140px;
   background: royalblue;
   box-sizing: border-box;
+  flex-shrink: 0;
+  padding: 8px;
 }
 
 .card {
   border: 1px solid #eee;
   box-shadow: 2px 4px 16px rgba(0,0,0,.06);
   border-radius: 4px;
+}
+
+ul {
+  list-style-type: none;
+  margin: 0;
+  padding: 0;
+  
+}
+
+li {
+  margin-bottom: 16px;
+  
+}
+
+a {
+  color: white;
+  text-decoration: none;
+  font-size: 12px;
+}
+
+.body {
+  flex: 1 1 auto;
+  display: flex;
+}
+
+.container {
+  display: flex;
+  flex-wrap: wrap;
+  flex: 1 1 140px;
+  gap: 10px;
+  padding: 20px;
+}
+
+.card {
+  width: 230px;
+  padding: 10px;
+  font-size: 0.8em;
 }
