--- a/intermediate-html-css/advanced-grid/02-holy-grail-mockup/style.css
+++ b/intermediate-html-css/advanced-grid/02-holy-grail-mockup/style.css
@@ -4,6 +4,9 @@
 }
 
 .container {
+  display: grid;
+  grid-template-columns: 1fr 5fr;
+  gap: 4px;
   text-align: center;
 }
 
@@ -15,17 +18,34 @@
   color: white;
 }
 
-.header {
+.header {  
+  display: grid;
+  grid-column: 1/3;
+  grid-template-columns: 1fr 4.5fr;
   background-color: #393f4d;
+  text-align: left;
+}
+
+.menu {
+  align-self: center;
 }
 
 .menu ul,
 .menu li {
+  display: grid;
+  grid-row: 2/3;
+  grid-template-columns: repeat(4, 1fr);
   font-size: 16px;
+  text-align: center;
+  list-style-type: none;
 }
 
 .sidebar {
-  background-color: #C50208;
+  display: grid;
+  grid-template-rows: repeat(4, 1fr);
+  grid-row: 2/4;
+  background-color: #C50208;  
+  gap: 50px;   
 }
 
 .sidebar .photo {
@@ -42,19 +62,31 @@
   color: black;
   font-size: 16px;
   font-weight: normal;
+  border-radius: 10px;
 }
 
 .nav {
   background-color: #C50208;
 }
 
-.nav ul li {
+.nav ul {
+  display: grid;
+  grid-template-columns: repeat(3, 1fr);
+  list-style-type: none;
+}
+
+.nav ul li {  
+  
   font-size: 16px;
   text-transform: uppercase;
 }
 
 .article {
+  display: grid;
+  grid-template-columns: repeat(auto-fit, minmax(250px, 1fr));
+  gap: 15px;
   background-color: #bccbde;
+  
 }
 
 .article p {
@@ -68,6 +100,7 @@
   background-color: #FFFFFF;
   color: black;
   text-align: center;
+  height: 200px;
 }
 
 .card p {
@@ -82,6 +115,7 @@
 }
 
 .footer {
+  grid-column: 1/3;
   background-color: #393f4d;
 }
 
